@@ -1,3 +1,7 @@
+ 31-12-2006 Qball <Qball@sarine.nl>
+    * src/playlist3-find3-browser.c:	Fix ctrl-j
+    * src/playlist3-find2-browser.c:	Cleanups
+
 30-12-2006 Qball <qball@qballcow.nl>
     * src/*:				Update for api
     * src/plugin.h: 			Change plugin api
